metno: Upgrade to tomcat v10 and java v17